file(GLOB sources "*.c" "*.cpp")

add_library(MPI SHARED IMPORTED)
set_target_properties(MPI  PROPERTIES IMPORTED_LOCATION ${I_MPI_ROOT}/lib/libmpi.so)

link_directories(${EXAMPLES_LIB_DIRS})

foreach(src ${sources})
    get_filename_component(executable ${src} NAME_WE)
    add_executable(${executable} ${src})
    target_include_directories(${executable} PRIVATE ${EXAMPLES_INC_DIRS} ${COMPUTE_BACKEND_TARGET_NAME})
    target_link_libraries(${executable} PRIVATE ccl)
    target_link_libraries(${executable} PUBLIC rt)
    target_link_libraries(${executable} PUBLIC m)
    target_link_libraries(${executable} PUBLIC dl)
    target_link_libraries(${executable} PUBLIC pthread)
    target_link_libraries(${executable} PUBLIC stdc++)
    target_link_libraries(${executable} PRIVATE MPI)
    target_link_libraries(${executable} PRIVATE ${COMPUTE_BACKEND_TARGET_NAME})
    install(TARGETS ${executable} RUNTIME DESTINATION ${CCL_INSTALL_EXAMPLES}/cpu OPTIONAL)
endforeach()
