file(GLOB sources "*.c" "*.cpp")

foreach(src ${sources})
    get_filename_component(executable ${src} NAME_WE)
    add_executable(${executable} ${src})
    target_include_directories(${executable} PRIVATE ${EXAMPLES_INC_DIRS} ${COMPUTE_RUNTIME_TARGET_NAME})
    target_link_libraries(${executable} PUBLIC rt)
    target_link_libraries(${executable} PUBLIC m)
    target_link_libraries(${executable} PRIVATE ccl)
    target_link_libraries(${executable} PRIVATE m pthread)
    target_link_libraries(${executable} PRIVATE mpi)
    target_link_libraries(${executable} PRIVATE ${COMPUTE_RUNTIME_TARGET_NAME})
    install(TARGETS ${executable} RUNTIME DESTINATION ${CCL_INSTALL_EXAMPLES} OPTIONAL)
endforeach()

